# hanabi

./: .gitignore  .pre-commit-config.yaml  README.md  action.py  agent.py  alembic.ini  board.py  card.py  deck.py  eslint.config.mjs  game.py  next.config.ts  package-lock.json  package.json  player.py  pruebas.ipynb  pyproject.toml  requirements.txt  vercel.json
.github/: CODEOWNERS
agents/: dummy_agent.py
alembic/: drop_alembic_version.py  env.py
alembic/versions/: 54992d7ed533_initial_migration.py
api/: index.py
api/debug/: cardsinit.ipynb
api/models/: base.py  enums.py  models.py
api/repository/: __init__.py  base_repository.py
api/routers/: card_routers.py  login_router.py
api/service/: card_service.py  login_service.py
api/shared/: db_connections.py  middleware.py  responses.py
api/shared/db/: seed_cards.py  seed_myuser.py
backend/: .pre-commit-config.yaml  pyproject.toml
backend/src/: main.py
backend/src/models/: Card.py
backend/src/routers/: game_starter.py
backend/src/services/: game_service.py
backend/src/shared/: response.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/start_game/: route.ts
frontend/src/app/game/: page.tsx
frontend/src/components/ui/Game/: GamePage.tsx
frontend/src/hooks/: use-toast.ts
frontend/src/lib/apicalls/: base.ts  baseApi.ts  startGame.ts
frontend/src/lib/backend/: startgameutils.ts
frontend/src/store/: CardStore.ts
frontend/src/types/: api.ts  apiTypes.ts  hanabi.ts
others/: action.py  agent.py  board.py  card.py  deck.py  game.py  player.py
src/app/: layout.tsx  page.tsx
src/app/contexts/: Sessions.tsx
src/app/game/: page.tsx
src/app/login/: page.tsx
src/components/: ProtectedRoute.tsx
src/lib/apicalls/: startGame.ts
src/store/: CardStore.ts
src/types/: enums.ts  hanabiTypes.ts  index.ts
src/types/api/: api.ts  apiTypes.ts
